--- a/htmls/nosotros.html
+++ b/htmls/nosotros.html
@@ -14,7 +14,7 @@
         </div>
     </header>
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="galeria.html">Galería de Arte</a>
         <a href="nosotros.html">Sobre Nosotros</a>
     </nav>
@@ -49,6 +49,11 @@
     <section class="advertencia">
         <h2>Advertencia</h2>
         <p><strong>Compra en Grande</strong> es una pagina ficticia creada como una muestra de habilidades en el desarrollo web.</p>
+    </section>
+
+    <section class="desarrollo">
+        <h2>Desarrollado por</h2>
+        <p><strong>Juan Sebastian Lozada Ceballos</strong> estudiante del SENA en el tecnologo de analisis y desarrollo de software.</p>
     </section>
 
     <!-- Sección de Contacto -->
