--- a/htmls/producto.html
+++ b/htmls/producto.html
@@ -11,7 +11,7 @@
         <h1>Compra en Grande</h1>
     </header>
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="galeria.html">Galería de Arte</a>
         <a href="nosotros.html">Sobre Nosotros</a>
     </nav>
@@ -50,3 +50,6 @@
     <script src="../scripts/script.js"></script>
 </body>
 </html>
+
+
+
