--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra en Grande - Tienda de Arte</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <!-- Encabezado -->
@@ -15,8 +15,8 @@
     </header>
     <nav>
         <a href="#galeria">Inicio</a>
-        <a href="./galeria.html">Galería de Arte</a>
-        <a href="./nosotros.html">Sobre Nosotros</a>
+        <a href="./htmls/galeria.html">Galería de Arte</a>
+        <a href="./htmls/nosotros.html">Sobre Nosotros</a>
     </nav>
 
     <!-- Banner Principal -->
@@ -29,18 +29,18 @@
     <section id="galeria" class="galeria">
         <h2>Nuestros Productos</h2>
         <div class="productos">
-            <div class="producto" onclick="verProducto('Colibrí en Primavera', 'Acrílico sobre lienzo', 100, '../imagenes/colobri en primavera.jpeg')">
-                    <img src="../imagenes/colobri en primavera.jpeg" alt="Colibrí en Primavera">
+            <div class="producto" onclick="verProducto('Colibrí en Primavera', 'Acrílico sobre lienzo', 100, '../imagenes/colobri en primavera.jpeg', true)">
+                    <img src="./imagenes/colobri en primavera.jpeg" alt="Colibrí en Primavera">
                     <h3>Colibrí en Primavera</h3>
                     <p>Acrílico sobre lienzo. Inspirado en la belleza de la naturaleza.</p>
             </div>
-            <div class="producto" onclick="verProducto('Caminando en Familia', 'Óleo sobre lienzo', 150, '../imagenes/caminando en familia.jpeg')">
-                    <img src="../imagenes/caminando en familia.jpeg" alt="Caminando en Familia">
+            <div class="producto" onclick="verProducto('Caminando en Familia', 'Óleo sobre lienzo', 150, '../imagenes/caminando en familia.jpeg', true)">
+                    <img src="./imagenes/caminando en familia.jpeg" alt="Caminando en Familia">
                     <h3>Caminando en Familia</h3>
                     <p>Óleo sobre lienzo. Ideal para crear un ambiente acogedor.</p>
             </div>
-            <div class="producto" onclick="verProducto('El principito', 'Oleo sobre lienzo.', 100, '../imagenes/Principito.jpeg')">
-                    <img src="../imagenes/Principito.jpeg" alt="Principito">
+            <div class="producto" onclick="verProducto('El principito', 'Oleo sobre lienzo.', 100, '../imagenes/Principito.jpeg', true)">
+                    <img src="./imagenes/Principito.jpeg" alt="Principito">
                     <h3>El Principito</h3>
                     <p>Oleo sobre lienzo. Para recordar la infancia.</p>
             </div>
@@ -64,6 +64,6 @@
         <p>&copy; 2024 Compra en Grande. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="../scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
