--- a/htmls/galeria.html
+++ b/htmls/galeria.html
@@ -13,7 +13,7 @@
         </div>
     </header>
     <nav>
-        <a href="index.html">Inicio</a>
+        <a href="../index.html">Inicio</a>
         <a href="galeria.html">Galería de Arte</a>
         <a href="nosotros.html">Sobre Nosotros</a>
     </nav>
